--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Debentures</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Debentures</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+<ul id="main-nav-container">
+  <a href="" class="container-href">
+    <div class="main-nav-element-container">
+      <li class="main-nav-element">АВТОРИЗАЦИЯ</li>
+    </div>
+  </a><a href="" class="container-href">
+  <div class="main-nav-element-container">
+    <li class="main-nav-element">РЕГИСТРАЦИЯ</li>
+  </div>
+</a>
+  <% if (session[:name] != nil and session[:name] != '') %>
+    <div class="main-nav-user-element">
+      <a href="" class="container-href">
+        <div class="main-nav-element-container">
+          <li class="main-nav-element"><%= session[:name].upcase %></li>
+        </div>
+      </a>
+      <a href="" class="container-href">
+        <div class="main-nav-element-container" onclick="document.location = '/logout'">
+          <li class="main-nav-element">ВЫХОД</li>
+        </div>
+      </a>
+    </div>
+  <% end %>
+</ul>
+<div class="all-container">
+  <%= yield %>
+</div>
+</body>
 </html>
