--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,16 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
 <ul id="main-nav-container">
-  <a href="" class="container-href">
+  <a href="/auth" class="container-href">
     <div class="main-nav-element-container">
       <li class="main-nav-element">АВТОРИЗАЦИЯ</li>
     </div>
-  </a><a href="" class="container-href">
+  </a><a href="/reg" class="container-href">
   <div class="main-nav-element-container">
     <li class="main-nav-element">РЕГИСТРАЦИЯ</li>
   </div>
