--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
   </div>
 </a>
   <% if (session[:name] != nil and session[:name] != '') %>
+    <a href="/generate" class="container-href">
+      <div class="main-nav-element-container">
+        <li class="main-nav-element">СОЗДАНИЕ РАСПИСКИ</li>
+      </div>
+    </a>
     <div class="main-nav-user-element">
       <a href="" class="container-href">
         <div class="main-nav-element-container">
