--- a/app/views/debentures/generate.html.erb
+++ b/app/views/debentures/generate.html.erb
@@ -1,37 +1,35 @@
 <div class="gen-main-container">
   <div class="gen-inputs-container">
     <h2>Паспорт Кредитора</h2>
-    <input type="text" name="" id="" class="gen-input" placeholder="Имя">
-    <input type="text" name="" id="" class="gen-input" placeholder="Фамилия">
-    <input type="text" name="" id="" class="gen-input" placeholder="Отчество">
-    <input type="text" name="" id="" class="gen-input" placeholder="Серия паспорта">
-    <input type="text" name="" id="" class="gen-input" placeholder="Номер паспорта">
-    <input type="text" name="" id="" class="gen-input" placeholder="Дата выдачи">
-    <input type="text" name="" id="" class="gen-input" placeholder="Место выдачи">
-    <input type="text" name="" id="" class="gen-input" placeholder="Пол">
+    <input type="text" name="" id="input-first-1" class="gen-input" placeholder="Имя">
+    <input type="text" name="" id="input-last-1" class="gen-input" placeholder="Фамилия">
+    <input type="text" name="" id="input-middle-1" class="gen-input" placeholder="Отчество">
+    <input type="text" name="" id="input-serial-1" class="gen-input" placeholder="Серия паспорта">
+    <input type="text" name="" id="input-number-1" class="gen-input" placeholder="Номер паспорта">
+    <input type="text" name="" id="input-given-1" class="gen-input" placeholder="Дата выдачи">
+    <input type="text" name="" id="input-place-1" class="gen-input" placeholder="Место выдачи">
   </div>
   <div class="gen-inputs-container">
     <h2>Параметры Займа</h2>
     <h3 class="gen-href">Дата выдачи</h3>
-    <input type="date" name="" id="" class="gen-input" placeholder="Дата выдачи" value="">
+    <input type="date" name="" id="input-date-given" class="gen-input" placeholder="Дата выдачи" value="">
     <h3 class="gen-href">Дата возварата</h3>
-    <input type="date" name="" id="" class="gen-input" placeholder="Дата возврата" value="">
-    <input type="number" name="" id="" class="gen-input" placeholder="Сумма займа">
-    <input type="number" name="" id="" class="gen-input" placeholder="Годовой процент">
-    <input type="checkbox" name="" id="" class="" value="Санкции при просрочке">
-    <input type="number" name="" id="" class="gen-input" placeholder="Процент при просрочке">
-    <input type="number" name="" id="" class="gen-input" placeholder="Выплата при просрочке">
+    <input type="date" name="" id="input-date-return" class="gen-input" placeholder="Дата возврата" value="">
+    <input type="number" name="" id="input-sum" class="gen-input" placeholder="Сумма займа">
+    <input type="number" name="" id="input-percent" class="gen-input" placeholder="Годовой процент">
+    <input type="checkbox" name="" id="input-sanction" class="" value="Санкции при просрочке">
+    <input type="number" name="" id="input-sanction-percent" class="gen-input" placeholder="Процент при просрочке">
+    <input type="number" name="" id="input-sanction-payment" class="gen-input" placeholder="Выплата при просрочке">
   </div>
   <div class="gen-inputs-container">
     <h2>Паспорт Заёмщика</h2>
-    <input type="text" name="" id="" class="gen-input" placeholder="Имя">
-    <input type="text" name="" id="" class="gen-input" placeholder="Фамилия">
-    <input type="text" name="" id="" class="gen-input" placeholder="Отчество">
-    <input type="text" name="" id="" class="gen-input" placeholder="Серия паспорта">
-    <input type="text" name="" id="" class="gen-input" placeholder="Номер паспорта">
-    <input type="text" name="" id="" class="gen-input" placeholder="Дата выдачи">
-    <input type="text" name="" id="" class="gen-input" placeholder="Место выдачи">
-    <input type="text" name="" id="" class="gen-input" placeholder="Пол">
+    <input type="text" name="" id="input-first-2" class="gen-input" placeholder="Имя">
+    <input type="text" name="" id="input-last-2" class="gen-input" placeholder="Фамилия">
+    <input type="text" name="" id="input-middle-2" class="gen-input" placeholder="Отчество">
+    <input type="text" name="" id="input-serial-2" class="gen-input" placeholder="Серия паспорта">
+    <input type="text" name="" id="input-number-2" class="gen-input" placeholder="Номер паспорта">
+    <input type="text" name="" id="input-given-2" class="gen-input" placeholder="Дата выдачи">
+    <input type="text" name="" id="input-place-2" class="gen-input" placeholder="Место выдачи">
   </div>
   <div class="blank-container">
     <p>РАСПИСКА</p>
@@ -42,8 +40,37 @@
     <p>получил от займодавца - <span id="span-last-2"></span> <span id="span-first-2"></span> <span id="span-middle-2"></span>, паспорт: серия <span id="span-serial-2"></span> N <span id="span-num-2"></span></p>
     <p>выдан <span id="span-given-2"></span> <span id="span-address-2"></span></p>
     <p>денежную сумму в размере <span id="span-count"></span> рублей</p>
-    <p>Указанную заёмную денежную сумму и проценты за пользование ими в размере  годовых, я обязуюсь возвратить в срок до <span id="span-date-end"></span> года по месту жителя займодавца наличными денежными средствами</p>
+    <p>Указанную заёмную денежную сумму и проценты за пользование ими в размере <span id="span-percent"></span> годовых, я обязуюсь возвратить в срок до <span id="span-date-end"></span> года по месту жителя займодавца наличными денежными средствами</p>
     <p>За просрочку возвратасуммы в вышеуказанный срок обязуюсь уплатить неустойку в размере <span id="span-san-payment"></span> рублей, а так же <span id="span-san-percent"></span>% от суммы займа за каждый день просрочки</p>
     дата подпись
   </div>
 </div>
+<script>
+    $( ".gen-input" ).change(changed);
+
+    function changed()
+    {
+        $('#span-first-1').text($('#input-first-1').val());
+        $('#span-last-1').text($('#input-last-1').val());
+        $('#span-middle-1').text($('#input-middle-1').val());
+        $('#span-serial-1').text($('#input-serial-1').val());
+        $('#span-num-1').text($('#input-number-1').val());
+        $('#span-given-1').text($('#input-given-1').val());
+        $('#span-address-1').text($('#input-place-1').val());
+
+        $('#span-first-1').text($('#input-first-2').val());
+        $('#span-last-1').text($('#input-last-2').val());
+        $('#span-middle-1').text($('#input-middle-2').val());
+        $('#span-serial-1').text($('#input-serial-2').val());
+        $('#span-num-1').text($('#input-number-2').val());
+        $('#span-given-1').text($('#input-given-2').val());
+        $('#span-address-1').text($('#input-place-2').val());
+
+        $('#span-count').text($('#input-sum').val());
+        $('#span-date-end').text($('#input-date-return').val());
+        $('#span-percent').text($('#input-percent').val());
+        $('#span-san-payment').text($('#input-sanction-payment').val());
+        $('#span-san-percent').text($('#input-sanction-percent').val());
+        //$('#span-address-1').text($('#input-place-2').val());
+    }
+</script>
