--- a/app/views/users/auth.html.erb
+++ b/app/views/users/auth.html.erb
@@ -7,7 +7,7 @@
       <% end %>
       <form action="/auth" method="post" class="auth-form">
         <h3>Логин</h3>
-        <a href="" class="auth-form-href">Нет аккаунта?</a>
+        <a href="/reg" class="auth-form-href">Нет аккаунта?</a>
         <input type="text" name="username" class="auth-text-input">
         <h3>Пароль</h3>
         <input type="password" name="password" class="auth-text-input">
