--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
       </a>
     </div>
   <% end %>
+  <div class="nav-underline">
+
+  </div>
 </ul>
 <div class="all-container">
   <%= yield %>
