--- a/app/assets/stylesheets/debentures.scss
+++ b/app/assets/stylesheets/debentures.scss
@@ -29,6 +29,13 @@
   margin-bottom: 10px;
 }
 
+#gen-submit-container
+{
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+}
+
 .gen-href
 {
   margin: 4px 2px;
@@ -47,7 +54,32 @@
   background: white;
   margin-top: 20px;
   font-size: 18px;
-  font-family: Geneva, Arial, Helvetica, sans-serif;;
+  font-family: Geneva, Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+}
+
+#input-sanction
+{
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 0 10px 0 rgba(0,0,0,0.05);
+  padding: 9px;
+  border-radius: 10000px;
+  display: inline-block;
+  position: relative;
+  margin-bottom: -3px;
+}
+
+#input-sanction:active, #input-sanction:checked:active {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+#input-sanction:checked {
+  background-color: #00ee37;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0, 159, 119, 0.59), inset 0px 0 10px 0 rgba(0, 255, 92, 0.55), inset 0px 0 10px 0 rgba(0, 73, 255, 0.7);
+  color: #99a1a7;
 }
 
 /// GENERATE END
