--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,6 +12,9 @@
 body
 {
   height: calc(100vh - 16px);
+  background-image: linear-gradient( #009f77 0%, #169f00 100%);
+  background-repeat: no-repeat;
+  background-color: #169f00;
 }
 
 .all-container
@@ -25,12 +28,11 @@ body
 
 #main-nav-container
 {
-  width: 100%;
+  width: calc(100% + 16px);
   text-align: center;
-  margin: -8px 0px 10px 0px;
+  margin: -8px -8px 10px -8px;
   padding: 0px;
   background-image: linear-gradient(#5b5b5b 0%, #696969 40%, #696969 60%, #5b5b5b 100%);
-  box-shadow: #7f7f7f 0px 0px 3px 3px;
 }
 
 .main-nav-element-container
@@ -45,7 +47,7 @@ body
 {
   transition: 0.2s;
   background-color: #169f00;
-  transform: translateY(2px);
+  transform: translateY(4px);
   box-shadow: #169f00 0px -2px 0px 0px;
 }
 
@@ -70,6 +72,13 @@ body
   color: black;
 }
 
+.nav-underline
+{
+  height: 4px;
+  width: 100%;
+  background-image: linear-gradient(white, white);
+}
+
 /// END APPLICATION
 
 /// AUTH
@@ -78,7 +87,7 @@ body
 {
   display: flex;
   width: 100%;
-  height: 100%;
+  min-height: calc(100vh - 88px);
 }
 
 .auth-main-container
@@ -165,6 +174,8 @@ body
 .reg-name-h2
 {
   font-family: Arial;
+  text-align: center;
+  margin: 0px 0px 20px 0px;
 }
 
 #reg-form-1
