--- a/app/views/users/auth.html.erb
+++ b/app/views/users/auth.html.erb
@@ -1,7 +1,7 @@
 <div class="auth-table-container">
   <div class="auth-main-container">
-    <h2 class="reg-name-h2">Авторизация</h2>
     <div class="auth-field-container">
+      <h2 class="reg-name-h2">Авторизация</h2>
       <% if flash[:error] != nil && flash[:error] != '' %>
         <h3 class="error-message"><%= flash[:error] %></h3>
       <% end %>
@@ -18,3 +18,21 @@
     </div>
   </div>
 </div>
+<style>
+    .all-container
+    {
+      background: transparent;
+    }
+    body
+    {
+      background-image: linear-gradient(45deg, #169f00, #009f77);
+    }
+    #main-nav-container
+    {
+      box-shadow: 0px 0px 0px black;
+    }
+    .nav-underline
+    {
+      background-image: linear-gradient(white, white);
+    }
+</style>
