--- a/app/views/debentures/generate.html.erb
+++ b/app/views/debentures/generate.html.erb
@@ -1,5 +1,6 @@
 <div class="gen-main-container">
   <form style="" action="/save-data" method="post">
+    <div><%= flash[:error] %></div>
     <div class="gen-inputs-container" id="gen-input-container-1">
       <h2>Паспорт Заёмщика</h2>
       <input type="text" name="first1" id="input-first-1" class="gen-input" placeholder="Имя">
