--- a/app/assets/stylesheets/debentures.scss
+++ b/app/assets/stylesheets/debentures.scss
@@ -2,6 +2,132 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("Helvetica Neue Condensed Black.ttf");
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-UltraLightItalic.otf");
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-UltraLight.otf");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-ThinItalic.otf");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Thin.otf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Roman.otf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-MediumItaicl.otf");
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Medium.otf");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-LightItalic.otf");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Light.otf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Italic.otf");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-HeavyItalic.otf");
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Heavy.otf");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-BoldItalic.otf");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-BlackItalic.otf");
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("HelveticaNeueCyr-Black.otf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("Helvetica Neue Condensed Bold.ttf");
+  font-weight: 100;
+  font-style: normal;
+}
+
 /// GENERATE START
 
 .gen-main-container
@@ -54,8 +180,17 @@
   background: white;
   margin-top: 20px;
   font-size: 18px;
-  font-family: Geneva, Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica Neue';
+  font-weight: 400;
+  font-style: normal;
   margin-bottom: 10px;
+}
+
+.blank-container span
+{
+  font-family: 'Helvetica Neue';
+  font-weight: 600;
+  font-style: italic;
 }
 
 #input-sanction
@@ -80,6 +215,33 @@
   border: 1px solid #adb8c0;
   box-shadow: 0 1px 2px rgba(0, 159, 119, 0.59), inset 0px 0 10px 0 rgba(0, 255, 92, 0.55), inset 0px 0 10px 0 rgba(0, 73, 255, 0.7);
   color: #99a1a7;
+}
+
+#payment-table
+{
+  font-size: 18px;
+  font-family: "Helvetica Neue";
+  font-weight: 400;
+  font-style: normal;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+
+#payment-table .main-row
+{
+  font-weight: 600;
+}
+
+#payment-table tr
+{
+  text-align: right;
+}
+
+#payment-table tr td
+{
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
 /// GENERATE END
