--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,11 @@
       <li class="main-nav-element">СОЗДАНИЕ РАСПИСКИ</li>
     </div>
   </a>
+  <a href="/table" class="container-href">
+    <div class="main-nav-element-container">
+      <li class="main-nav-element">СОЗДАНИЕ ТАБЛИЦЫ</li>
+    </div>
+  </a>
   <% if (session[:name] != nil and session[:name] != '') %>
     <div class="main-nav-user-element">
       <a href="" class="container-href">
