--- a/app/assets/stylesheets/debentures.scss
+++ b/app/assets/stylesheets/debentures.scss
@@ -32,98 +32,98 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Thin.otf");
+  src: url("fonts/HelveticaNeueCyr-Thin.otf");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Roman.otf");
+  src: url("fonts/HelveticaNeueCyr-Roman.otf");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-MediumItaicl.otf");
+  src: url("fonts/HelveticaNeueCyr-MediumItaicl.otf");
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Medium.otf");
+  src: url("fonts/HelveticaNeueCyr-Medium.otf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-LightItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-LightItalic.otf");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Light.otf");
+  src: url("fonts/HelveticaNeueCyr-Light.otf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Italic.otf");
+  src: url("fonts/HelveticaNeueCyr-Italic.otf");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-HeavyItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-HeavyItalic.otf");
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Heavy.otf");
+  src: url("fonts/HelveticaNeueCyr-Heavy.otf");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-BoldItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-BoldItalic.otf");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Bold.otf");
+  src: url("fonts/HelveticaNeueCyr-Bold.otf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-BlackItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-BlackItalic.otf");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-Black.otf");
+  src: url("fonts/HelveticaNeueCyr-Black.otf");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("Helvetica Neue Condensed Bold.ttf");
+  src: url("fonts/Helvetica Neue Condensed Bold.ttf");
   font-weight: 100;
   font-style: normal;
 }
