--- a/app/assets/stylesheets/debentures.scss
+++ b/app/assets/stylesheets/debentures.scss
@@ -4,28 +4,28 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("Helvetica Neue Condensed Black.ttf");
+  src: url("fonts/Helvetica Neue Condensed Black.ttf");
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-UltraLightItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-UltraLightItalic.otf");
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-UltraLight.otf");
+  src: url("fonts/HelveticaNeueCyr-UltraLight.otf");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("HelveticaNeueCyr-ThinItalic.otf");
+  src: url("fonts/HelveticaNeueCyr-ThinItalic.otf");
   font-weight: 300;
   font-style: italic;
 }
