--- a/app/assets/stylesheets/debentures.scss
+++ b/app/assets/stylesheets/debentures.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/Helvetica Neue Condensed Black.ttf");
+  src: url("../fonts/Helvetica Neue Condensed Black.ttf");
   font-weight: 100;
   font-style: italic;
 }
@@ -18,28 +18,28 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-UltraLight.otf");
+  src: url("../fonts/HelveticaNeueCyr-UltraLight.otf");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-ThinItalic.otf");
+  src: url("../fonts/HelveticaNeueCyr-ThinItalic.otf");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Thin.otf");
+  src: url("../fonts/HelveticaNeueCyr-Thin.otf");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Roman.otf");
+  src: url("../fonts/HelveticaNeueCyr-Roman.otf");
   font-weight: 500;
   font-style: normal;
 }
@@ -53,77 +53,77 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Medium.otf");
+  src: url("../fonts/HelveticaNeueCyr-Medium.otf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-LightItalic.otf");
+  src: url("../fonts/HelveticaNeueCyr-LightItalic.otf");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Light.otf");
+  src: url("../fonts/HelveticaNeueCyr-Light.otf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Italic.otf");
+  src: url("../fonts/HelveticaNeueCyr-Italic.otf");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-HeavyItalic.otf");
+  src: url("../fonts/HelveticaNeueCyr-HeavyItalic.otf");
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Heavy.otf");
+  src: url("../fonts/HelveticaNeueCyr-Heavy.otf");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-BoldItalic.otf");
+  src: url("../fonts/HelveticaNeueCyr-BoldItalic.otf");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Bold.otf");
+  src: url("../fonts/HelveticaNeueCyr-Bold.otf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-BlackItalic.otf");
+  src: url("../fonts/HelveticaNeueCyr-BlackItalic.otf");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/HelveticaNeueCyr-Black.otf");
+  src: url("../fonts/HelveticaNeueCyr-Black.otf");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url("fonts/Helvetica Neue Condensed Bold.ttf");
+  src: url("../fonts/Helvetica Neue Condensed Bold.ttf");
   font-weight: 100;
   font-style: normal;
 }
